--- a/CreamSoda.UI/CreamSoda.UI.csproj
+++ b/CreamSoda.UI/CreamSoda.UI.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Newtonsoft.Json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\Core\Core.csproj" />
+  </ItemGroup>
+
 </Project>
