--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -9,6 +9,9 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
         <PackageReference Include="Microsoft.Extensions.Http" />
         <PackageReference Include="System.Linq.Async" />
+      <PackageReference Include="Azure.AI.OpenAI" />
+      <PackageReference Include="Azure.Core" />
+      <PackageReference Include="Azure.Identity" />
     </ItemGroup>
 
 </Project>
