--- a/tests/Integration.Tests/Integration.Tests.csproj
+++ b/tests/Integration.Tests/Integration.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
@@ -17,13 +17,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\Api\Api.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
         <None Update="appsettings.Integration.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Api\Modules\" />
     </ItemGroup>
 
 </Project>
