--- a/CreamSoda.UI/CreamSoda.UI.csproj
+++ b/CreamSoda.UI/CreamSoda.UI.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.Agents.Persistent" />
     <PackageReference Include="Azure.AI.OpenAI" />
     <PackageReference Include="Azure.Core" />
     <PackageReference Include="Azure.Identity" />
